--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -32,7 +32,7 @@ jobs:
         EOF
 
     - name: Install tex live
-      run: sudo apt install texlive-full texlive-latex-recommended
+      run: sudo apt-get install -y texlive-full texlive-latex-recommended
     
     - name: Build main document
       run: pdflatex -interaction=nonstopmode -halt-on-error main.tex
