--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -185,7 +185,8 @@ jobs:
         window.MathJax = {
           tex: {
             macros: {
-              parbox: ["#2", 2]
+              parbox: ["#2", 2],
+              sb: '_'
             },
             inlineMath: {'[+]': [['$', '$'], ['\\\(', '\\\)']]},
             processEscapes: true,
